--- a/MalhasHDiv4Spaces/CMakeLists.txt
+++ b/MalhasHDiv4Spaces/CMakeLists.txt
@@ -5,11 +5,11 @@ file(GLOB HEADERS *.h)
 file(GLOB SOURCE *.cpp)
 
 
-SET(Commonfiles_SRC "TPZCondensedMeshAlgebra.cpp" "TPZDistributedMeshAlgebra.cpp" "TPZHdivTransfer.cpp" "TPZMixedDarcyWithFourSpaces.cpp" "ConfigurateCase.cpp" "TPZMHMixedMesh4SpacesControl.cpp")
+SET(Commonfiles_SRC "TPZCondensedMeshAlgebra.cpp" "TPZDistributedMeshAlgebra.cpp" "TPZHdivTransfer.cpp" "TPZMixedDarcyWithFourSpaces.cpp" "ConfigurateCase.cpp" "TPZMHMixedMesh4SpacesControl.cpp" "TPZPrintUtils.cpp")
 
 #add_executable(MalhasHdiv MalhasHdiv.cpp ${Commonfiles_SRC} ${HEADERS})
 #add_executable(MalhasHdivRefactor MalhasHdivRefactor.cpp ${TPZCondensedMeshAlgebra.cpp TPZDistributedMeshAlgebra.cpp  TPZHdivTransfer.cpp TPZMixedDarcyWithFourSpaces.cpp }  ${HEADERS})
-add_executable(MalhasHdiv4Spaces MalhasHdivRefactor.cpp ${Commonfiles_SRC}  ${HEADERS})
+add_executable(MalhasHdiv4Spaces MalhasHdivRefactor.cpp ${Commonfiles_SRC}  ${HEADERS} )
 
 
 #target_include_directories(MalhasHdiv PUBLIC ${lib_dir})
@@ -17,7 +17,7 @@ target_include_directories(MalhasHdiv4Spaces PUBLIC ${lib_dir})
 
 
 #target_link_libraries(MalhasHdiv pz ${OpenCV_LIBS})
-target_link_libraries(MalhasHdiv4Spaces pz )
+target_link_libraries(MalhasHdiv4Spaces NeoPZ::pz )
 
 file (COPY PlotGenerator.nb/ DESTINATION Debug/PlotGenerator.nb)
 
