--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,8 @@ endif()
 
 #add_subdirectory(Laberinto)
 #add_subdirectory(RibFrac)
-add_subdirectory(MalhasHDiv4Spaces)
+# add_subdirectory(MalhasHDiv4Spaces)
+add_subdirectory(MalhasHdiv)
 
 #add_subdirectory(MonophasicDarcyTest)
 
