--- a/MalhasHdiv/CMakeLists.txt
+++ b/MalhasHdiv/CMakeLists.txt
@@ -9,17 +9,20 @@ SET(Commonfiles_SRC "TPZCondensedMeshAlgebra.cpp" "TPZDistributedMeshAlgebra.cpp
 
 add_executable(MalhasHdiv MalhasHdiv.cpp ${Commonfiles_SRC} ${HEADERS})
 add_executable(MalhasHdiv3D MalhasHdiv3D.cpp ${Commonfiles_SRC} ${HEADERS})
+add_executable(MalhasHdiv_old MalhasHdiv_old.cpp ${Commonfiles_SRC} ${HEADERS})
 #add_executable(MalhasHdivRefactor MalhasHdivRefactor.cpp ${TPZCondensedMeshAlgebra.cpp TPZDistributedMeshAlgebra.cpp  TPZHdivTransfer.cpp TPZMixedDarcyWithFourSpaces.cpp }  ${HEADERS})
 # add_executable(MalhasHdivRefactor MalhasHdivRefactor.cpp ${Commonfiles_SRC}  ${HEADERS})
 
 
 target_include_directories(MalhasHdiv PUBLIC ${lib_dir})
+target_include_directories(MalhasHdiv_old PUBLIC ${lib_dir})
 target_include_directories(MalhasHdiv3D PUBLIC ${lib_dir})
 # target_include_directories(MalhasHdivRefactor PUBLIC ${lib_dir})
 
 
 target_link_libraries(MalhasHdiv NeoPZ::pz ${OpenCV_LIBS})
 target_link_libraries(MalhasHdiv3D NeoPZ::pz ${OpenCV_LIBS})
+target_link_libraries(MalhasHdiv_old NeoPZ::pz ${OpenCV_LIBS})
 # target_link_libraries(MalhasHdivRefactor NeoPZ::pz )
 
 file (COPY PlotGenerator.nb/ DESTINATION Debug/PlotGenerator.nb)
